--- a/twitter_scraper/stream_twitter.ipynb
+++ b/twitter_scraper/stream_twitter.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a14201b809941bc376bc08a5498939513838a74f9807c7f5e9b38a878ef2a552"
+  "signature": "sha256:c01dfe3199f8020aab0e4ab4780281badddde163fb9d045c5f67f79df880b058"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "What key words do you want to look for in twitter"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -18,6 +26,14 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "import tweepy tools, dont forget to \"pip install tweepy\" in your shell"
+     ]
     },
     {
      "cell_type": "code",
@@ -60,6 +76,14 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 14
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "run the script that streams the twitter data and saves it to the file output.json"
+     ]
     },
     {
      "cell_type": "code",
