added linux scripts

--- a/twitter_scraper/buckets_for_jason.ipynb
+++ b/twitter_scraper/buckets_for_jason.ipynb
@@ -522,12 +522,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check these cool links out:\n",
+    "    \n",
+    "https://gist.github.com/andrewschoen/1732726\n",
+    "\n",
+    "https://pypi.python.org/pypi/boto_rsync/0.8.1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "file2 = bucket.new_key('file2.txt')\n",
     "file2.set_contents_from_string('hello world!!!',policy='private')"
