--- a/twitter_scraper/read_json_merge.ipynb
+++ b/twitter_scraper/read_json_merge.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -19,8 +19,12 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import glob\n",
+    "# glob.glob\n",
     "# filename = './results/output.json' #give the filename!\n",
-    "files = ['./results/output 2.json','./results/output.json','./results/tweets.json']"
+    "files = ['./results/output 2.json','./results/output.json','./results/tweets.json']\n",
+    "\n",
+    "files = glob.glob('./results/*.json')"
    ]
   },
   {
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +64,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "264021"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data = list(set(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
